# flood_scripts

./: README.md  pyproject.toml
constants/: constants.py  range_classes.csv
geoserver/: interface.py
interface/: connection.py
scripts/: pipeline.py  populateBuffer.py
stochastic/: constants.py  generate_aal_aep_from_csv.py
stochastic/civ/: JG_20220518_2021s1110_ANA03_CI_01_gul_S1_aalcalc.csv  JG_20220518_2021s1110_ANA03_CI_01_gul_S1_leccalc_wheatsheaf_aep.csv  JG_20220518_2021s1110_ANA03_CI_01_gul_S2_aalcalc.csv  JG_20220518_2021s1110_ANA03_CI_01_gul_S2_leccalc_wheatsheaf_aep.csv  JG_20220518_2021s1110_ANA04_CI_01_gul_S1_aalcalc.csv  JG_20220518_2021s1110_ANA04_CI_01_gul_S1_leccalc_wheatsheaf_aep.csv  JG_20220518_2021s1110_ANA04_CI_01_gul_S2_aalcalc.csv  JG_20220518_2021s1110_ANA04_CI_01_gul_S2_leccalc_wheatsheaf_aep.csv  JG_20220518_2021s1110_ANA05_CI_01_gul_S1_aalcalc.csv  JG_20220518_2021s1110_ANA05_CI_01_gul_S1_leccalc_wheatsheaf_aep.csv  JG_20220518_2021s1110_ANA05_CI_01_gul_S2_aalcalc.csv  JG_20220518_2021s1110_ANA05_CI_01_gul_S2_leccalc_wheatsheaf_aep.csv
stochastic/gha/: ANA_20_GH_POP_gul_S1_aalcalc.csv  ANA_20_GH_POP_gul_S1_leccalc_wheatsheaf_aep.csv  ANA_20_GH_POP_gul_S2_aalcalc.csv  ANA_20_GH_POP_gul_S2_leccalc_wheatsheaf_aep.csv  ANA_21_GH_POP_gul_S1_aalcalc.csv  ANA_21_GH_POP_gul_S1_leccalc_wheatsheaf_aep.csv  ANA_21_GH_POP_gul_S2_aalcalc.csv  ANA_22_GH_POP_gul_S1_aalcalc.csv  (+5 more)
utils/: csv2geojson.py  dataframe.py  date.py  decorator.py  depth.py  event.py  files.py  format.py  geodataframe.py  json.py  sftp.py  stats.py  string_format.py  tif.py
(+62 files in other folders)
